# YandexMusicBetaModeRust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  error.rs  main.rs  patcher.rs  patches.rs
